--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
-        "monolog/monolog": "^3.2"
+        "monolog/monolog": "^3.2",
+        "nesbot/carbon" : "^2.60"
     }
 }
